Game Activity Settings updated

--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -1471,11 +1471,11 @@
     color: white;
 }
 .theme-dark .user-settings-games .not-detected, 
-.theme-light .user-settings-games .not-detected {
+.theme-light .notDetected-33MY4s {
     background-color: #4F1C4F;
 }
-.theme-dark .user-settings-games .now-playing, 
-.theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, 
+.theme-light .nowPlaying-284llR {
     background-color: #840058;
 }
 .lookLink-9FtZy-.colorLink-35jkBc {
@@ -1484,25 +1484,25 @@
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0) 1px,#840058 0,#840058 2px,rgba(0, 0, 0, 0) 0);
 }
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: #2C102C;
 }
-.theme-dark .user-settings-games .game {
+.theme-dark .game-1ipmAa {
     box-shadow: none;
 }
-.theme-dark .user-settings-games .now-playing .last-played, 
-.theme-dark .user-settings-games .now-playing .overlay-status-text, 
-.theme-light .user-settings-games .now-playing .last-played, 
-.theme-light .user-settings-games .now-playing .overlay-status-text {
+.theme-dark .nowPlaying-284llR .last-played, 
+.theme-dark .nowPlaying-284llR .overlay-status-text, 
+.theme-light .nowPlaying-284llR .last-played, 
+.theme-light .nowPlaying-284llR .overlay-status-text {
     color: #BB73A3;
 }
-.theme-dark .user-settings-games .game-name-input:focus, 
-.theme-dark .user-settings-games .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, 
+.theme-dark .gameNameInput-385LoS:hover {
     background-color: black;
     border-color: #840058;
 }
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text {
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa {
     color: white;
 }
 .theme-dark .markDash-3hAolZ {
