--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -795,7 +795,7 @@ a,
 }
 .theme-dark .card-FDVird:before,
 .theme-dark .user-settings-games .not-detected, 
-.theme-light .user-settings-games .not-detected {
+.theme-light .notDetected-33MY4s {
     background-color: rgba(0,0,0,0.3);
     border-color: transparent;
 }
@@ -803,24 +803,24 @@ a,
     background-color: black !important;
     box-shadow: none;
 }
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .row-3ZE8bQ,
 .theme-dark .item-3eFBNF {
     box-shadow: none;
 }
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text,
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa,
 .lookLink-9FtZy-.colorLink-35jkBc {
     color: #EFD9C3;
 }
-.theme-dark .user-settings-games .now-playing .last-played, 
-.theme-dark .user-settings-games .now-playing .overlay-status-text, 
-.theme-light .user-settings-games .now-playing .last-played, 
-.theme-light .user-settings-games .now-playing .overlay-status-text {
+.theme-dark .nowPlaying-284llR .last-played, 
+.theme-dark .nowPlaying-284llR .overlay-status-text, 
+.theme-light .nowPlaying-284llR .last-played, 
+.theme-light .nowPlaying-284llR .overlay-status-text {
     color: #EFD9C3;
 }
-.theme-dark .user-settings-games .now-playing, 
-.theme-light .user-settings-games .now-playing,
+.theme-dark .nowPlaying-284llR, 
+.theme-light .nowPlaying-284llR,
 .standardSidebarView-3F1I7i #editor-detached button,
 .bda-slist .bda-footer button {
     background-color: #705435;
@@ -840,7 +840,7 @@ a,
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0) 1px,#EFD9C3 0,#EFD9C3 2px,rgba(0, 0, 0, 0) 0);
 }
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: black;
 }
 .theme-dark .elevationBorderHigh-3Y6y6W {
