--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -436,7 +436,7 @@
 }
 
 .theme-dark .notificationsSound-27jFSh,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .item-3eFBNF {
   box-shadow: none;
 }
@@ -455,7 +455,7 @@
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #546de5 0, #546de5 2px, rgba(0, 0, 0, 0) 0);
 }
 
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
   background-color: black;
 }
 
@@ -474,12 +474,12 @@
 
 .theme-dark .user-settings-games .last-played,
 .theme-dark .user-settings-games .overlay-status-text,
-.theme-dark .user-settings-games .now-playing .last-played,
-.theme-dark .user-settings-games .now-playing .overlay-status-text {
+.theme-dark .nowPlaying-284llR .last-played,
+.theme-dark .nowPlaying-284llR .overlay-status-text {
   color: silver;
 }
 
-.theme-dark .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR {
   background-color: rgba(255, 255, 255, 0.34);
 }
 
@@ -494,14 +494,14 @@
   /*Primary Color*/
 }
 
-.theme-dark .user-settings-games .game-name {
+.theme-dark .game-1ipmAa-name {
   color: white;
 }
 
-.theme-dark .user-settings-games .game-name-input:focus,
-.theme-dark .user-settings-games .game-name-input:hover,
-.theme-dark .user-settings-games .now-playing .game-name-input:focus,
-.theme-dark .user-settings-games .now-playing .game-name-input:hover {
+.theme-dark .game-1ipmAa-name-input:focus,
+.theme-dark .game-1ipmAa-name-input:hover,
+.theme-dark .game-1ipmAa-input:focus,
+.theme-dark .game-1ipmAa-input:hover {
   background-color: rgba(255, 255, 255, 0.34);
   border-color: transparent;
 }
