--- a/Theme_Group_3/Kitty_Cat_Love.theme.css
+++ b/Theme_Group_3/Kitty_Cat_Love.theme.css
@@ -1161,7 +1161,7 @@ a,
 }
 .theme-dark .notificationsSound-27jFSh,
 .theme-dark .row-2okwlC,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .elevationBorderHigh-2WYJ09,
 .theme-dark .item-3eFBNF {
     box-shadow: none;
@@ -1177,25 +1177,25 @@ a,
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0) 1px,#F3D031 0,#F3D031 2px,rgba(0, 0, 0, 0) 0);
 }
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
    background-color: rgba(0,0,0,0.7);
 }
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text,
-.theme-dark .user-settings-games .now-playing .last-played, 
-.theme-dark .user-settings-games .now-playing .overlay-status-text, 
-.theme-light .user-settings-games .now-playing .last-played, 
-.theme-light .user-settings-games .now-playing .overlay-status-text,
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa,
+.theme-dark .nowPlaying-284llR .last-played, 
+.theme-dark .nowPlaying-284llR .overlay-status-text, 
+.theme-light .nowPlaying-284llR .last-played, 
+.theme-light .nowPlaying-284llR .overlay-status-text,
 .theme-dark .markValue-2DwdXI {
     color: white;
 }
 .theme-dark .user-settings-games .not-detected, 
-.theme-light .user-settings-games .not-detected {
+.theme-light .notDetected-33MY4s {
     background-color: #493979;
     border-radius: 0;
 }
-.theme-dark .user-settings-games .now-playing, 
-.theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, 
+.theme-light .nowPlaying-284llR {
     background-color: #5e4a9c;
     border-radius: 0;
 }
@@ -1213,8 +1213,8 @@ a,
 .grabber-3mFHz2:hover {
     opacity: 1;
 }
-.theme-dark .user-settings-games .game-name-input:focus, 
-.theme-dark .user-settings-games .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, 
+.theme-dark .gameNameInput-385LoS:hover {
     background-color: rgba(255,255,255,0.14);
     border-color: transparent;
 }
