--- a/Theme_Group_4/Clear_Sunset.theme.css
+++ b/Theme_Group_4/Clear_Sunset.theme.css
@@ -1509,7 +1509,7 @@
 }
 
 .theme-dark .item-3eFBNF,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .row-2okwlC,
 .theme-dark .notificationsSound-27jFSh {
     box-shadow: none;
@@ -1559,7 +1559,7 @@
     background-color: rgba(0,0,0,0.5);
 }
 
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: black;
 }
 
@@ -1603,24 +1603,24 @@
     border-color: transparent;
 }
 
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text {
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa {
     color: white;
 }
 
-.theme-dark .user-settings-games .game-name-input:focus, 
-.theme-dark .user-settings-games .game-name-input:hover,
-.theme-dark .user-settings-games .now-playing .game-name-input:focus, 
-.theme-dark .user-settings-games .now-playing .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, 
+.theme-dark .gameNameInput-385LoS:hover,
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:focus, 
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:hover {
     background-color: rgba(0,0,0,0.4);
     border-color: transparent;
 }
 
-.theme-dark .user-settings-games .now-playing .game-name {
+.theme-dark .game-1ipmAa {
     color: white;
 }
 
-.theme-dark .user-settings-games .now-playing, .theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, .theme-light .nowPlaying-284llR {
     background-color: rgba(0, 153, 51, 0.7);
 }
 
