--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -1941,19 +1941,20 @@
 
 .theme-dark .notificationsSound-27jFSh,
 .theme-dark .row-2okwlC,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .item-3eFBNF {
     box-shadow: none;
 }
 
-.theme-dark .user-settings-games .last-played, .theme-dark .user-settings-games .overlay-status-text,
-.theme-dark .user-settings-games .now-playing .game-name,
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa,
+.theme-dark .game-1ipmAa,
 .theme-dark .markValue-2DwdXI {
     color: white;
 }
 
-.theme-dark .user-settings-games .now-playing .game-name-input:focus, .theme-dark .user-settings-games .now-playing .game-name-input:hover,
-.theme-dark .user-settings-games .game-name-input:focus, .theme-dark .user-settings-games .game-name-input:hover {
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:focus, .theme-dark .nowPlaying-284llR .gameNameInput-385LoS:hover,
+.theme-dark .gameNameInput-385LoS:focus, .theme-dark .gameNameInput-385LoS:hover {
     background-color: rgba(255,255,255,0.23);
     border: 1px solid rgba(255,255,255,0.53)
 }
@@ -1969,7 +1970,7 @@
     color: #E6C93A;
 }
 
-.theme-dark .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR {
    background-color: rgba(81, 230, 58,0.6);
 }
 
@@ -1978,7 +1979,7 @@
 }
 
 
-.theme-dark .user-settings-games .now-playing .last-played, .theme-dark .user-settings-games .now-playing .overlay-status-text {
+.theme-dark .nowPlaying-284llR .last-played, .theme-dark .nowPlaying-284llR .overlay-status-text {
    color: white;
 }
 
@@ -1990,7 +1991,7 @@
     color: #51E63A;
 }
 
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: black;
 }
 
