--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -2133,7 +2133,7 @@
 
 .theme-dark .notificationsSound-27jFSh,
 .theme-dark .item-3eFBNF,
-.theme-dark .user-settings-games .game {
+.theme-dark .game-1ipmAa {
         box-shadow: none;
 }
 
@@ -2149,7 +2149,7 @@
         color: #BFAFB2;
 }
 
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
         background-color: black;
 }
 
@@ -2158,24 +2158,24 @@
         border-color: transparent;
 }
 
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text,
-.theme-dark .user-settings-games .now-playing .last-played, .theme-dark .user-settings-games .now-playing .overlay-status-text,
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa,
+.theme-dark .nowPlaying-284llR .last-played, .theme-dark .nowPlaying-284llR .overlay-status-text,
 .theme-dark .keybind-KpFkfr {
         color: silver;
 }
 
-.theme-dark .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR {
         background-color: rgba(175, 227, 19, 0.23);
         border: 2px solid rgba(175, 227, 19, 0.63);
 }
-.theme-dark .user-settings-games .game-name {
+.theme-dark .game-1ipmAa-name {
         color: white;
 }
-.theme-dark .user-settings-games .game-name-input:focus, 
-.theme-dark .user-settings-games .game-name-input:hover,
-.theme-dark .user-settings-games .now-playing .game-name-input:focus, 
-.theme-dark .user-settings-games .now-playing .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, 
+.theme-dark .gameNameInput-385LoS:hover,
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:focus, 
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:hover {
         background-color: rgba(255,255,255, 0.19);
         border-color: rgba(255,255,255, 0.12);
 }
