--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -312,7 +312,7 @@
 }
 .theme-dark .notificationsSound-27jFSh,
 .theme-dark .row-2okwlC,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .item-3eFBNF {
     box-shadow: none;
 }
@@ -327,7 +327,8 @@
     background-color: rgba(0,0,0,.1);
     border: none;
 }
-.theme-dark .user-settings-games .last-played, .theme-dark .user-settings-games .overlay-status-text {
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa {
     color: silver;
 }
 .theme-dark .button-mM-y8i {
@@ -347,35 +348,35 @@
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0) 1px,#593B3A 0,#593B3A 2px,rgba(0, 0, 0, 0) 0);
 }
 .theme-dark .user-settings-games .not-detected, 
-.theme-light .user-settings-games .not-detected {
+.theme-light .notDetected-33MY4s {
     background-color: #3e2928; /* Dark Color */
 }
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: #593B3A;
     border-radius: 0;
 }
 .theme-dark .elevationBorderHigh-2WYJ09 {
     box-shadow: none;
 }
-.theme-dark .user-settings-games .game-name-input:focus, .theme-dark .user-settings-games .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, .theme-dark .gameNameInput-385LoS:hover {
     background-color: rgba(255,255,255,0.123);
     border-color: transparent;
     box-shadow: 0 0 3px white;
 }
-.theme-dark .user-settings-games .now-playing, 
-.theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, 
+.theme-light .nowPlaying-284llR {
     background-color: #593B3A;
 }
-.theme-dark .user-settings-games .now-playing .last-played, .theme-dark .user-settings-games .now-playing .overlay-status-text, .theme-light .user-settings-games .now-playing .last-played, .theme-light .user-settings-games .now-playing .overlay-status-text {
+.theme-dark .nowPlaying-284llR .last-played, .theme-dark .nowPlaying-284llR .overlay-status-text, .theme-light .nowPlaying-284llR .last-played, .theme-light .nowPlaying-284llR .overlay-status-text {
     color: silver;
 }
-.user-settings-games .game-name-input {
+.gameNameInput-385LoS {
     border-radius: 0px;
     margin-bottom: 5px;
     padding: 0 4px;
     width: 240px;
 }
-.theme-dark .user-settings-games .now-playing .game-name-input:focus, .theme-dark .user-settings-games .now-playing .game-name-input:hover, .theme-light .user-settings-games .now-playing .game-name-input:focus, .theme-light .user-settings-games .now-playing .game-name-input:hover {
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:focus, .theme-dark .nowPlaying-284llR .gameNameInput-385LoS:hover, .theme-light .nowPlaying-284llR .gameNameInput-385LoS:focus, .theme-light .nowPlaying-284llR .gameNameInput-385LoS:hover {
     background-color: transparent;
     border: none;
 }
