--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -1140,7 +1140,7 @@
 }
 .theme-dark .notificationsSound-27jFSh,
 .theme-dark .row-2okwlC,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .item-3eFBNF {
     box-shadow: none;
 }
@@ -1156,19 +1156,19 @@
     color: white;
 }
 .theme-dark .user-settings-games .not-detected, 
-.theme-light .user-settings-games .not-detected {
+.theme-light .notDetected-33MY4s {
     background-color: black;
 }
-.theme-dark .user-settings-games .now-playing, 
-.theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, 
+.theme-light .nowPlaying-284llR {
     background-color: #5088A3;
 }
-.theme-dark .user-settings-games .last-played, 
-.theme-dark .user-settings-games .overlay-status-text {
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa {
     color: white;
 }
-.theme-dark .user-settings-games .game-name-input:focus, 
-.theme-dark .user-settings-games .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, 
+.theme-dark .gameNameInput-385LoS:hover {
     background-color: #5088A3;
     border-color: rgba(255,255,255,.3);
 }
@@ -1213,7 +1213,7 @@
 .standardSidebarView-3F1I7i #editor-detached button {
     background: #5088A3;
 }
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: #5088A3;
 }
 .ace-monokai,
