--- a/Theme_Group_4/Ram.theme.css
+++ b/Theme_Group_4/Ram.theme.css
@@ -602,7 +602,7 @@
 }
 
 .theme-dark .item-3eFBNF,
-.theme-dark .user-settings-games .game,
+.theme-dark .game-1ipmAa,
 .theme-dark .row-2okwlC,
 .theme-dark .notificationsSound-27jFSh {
     box-shadow: none
@@ -798,14 +798,15 @@
     box-shadow: none
 }
 
-.theme-dark .user-settings-games .game-name-input:focus, .theme-dark .user-settings-games .game-name-input:hover,
-.theme-dark .user-settings-games .now-playing .game-name-input:focus, .theme-dark .user-settings-games .now-playing .game-name-input:hover {
+.theme-dark .gameNameInput-385LoS:focus, .theme-dark .gameNameInput-385LoS:hover,
+.theme-dark .nowPlaying-284llR .gameNameInput-385LoS:focus, .theme-dark .nowPlaying-284llR .gameNameInput-385LoS:hover {
     background-color: rgba(255,255,255,0.09);
     border-color: transparent;
     color: white
 }
 
-.theme-dark .user-settings-games .last-played, .theme-dark .user-settings-games .overlay-status-text {
+.theme-dark .lastPlayed-3bQ7Bo, 
+.theme-dark .overlayStatusText-L2IACa {
     color: white;
 }
 
@@ -817,7 +818,7 @@
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0) 1px,#f896c1 0,#f896c1 2px,rgba(0, 0, 0, 0) 0)
 }
 
-.theme-dark .add-game-popout {
+.theme-dark .addGamePopout-2RY8Ju {
     background-color: black
 }
 
@@ -841,12 +842,12 @@
     border: 2px solid rgba(255,255,255,0.15)
 }
 
-.theme-dark .user-settings-games .now-playing, .theme-light .user-settings-games .now-playing {
+.theme-dark .nowPlaying-284llR, .theme-light .nowPlaying-284llR {
     background-color: #009432;
 }
 
-.theme-dark .user-settings-games .now-playing .last-played, .theme-dark .user-settings-games .now-playing .overlay-status-text,
-.theme-dark .user-settings-games .not-detected .last-played, .theme-light .user-settings-games .not-detected .last-played {
+.theme-dark .nowPlaying-284llR .last-played, .theme-dark .nowPlaying-284llR .overlay-status-text,
+.theme-dark .user-settings-games .not-detected .last-played, .theme-light .notDetected-33MY4s .last-played {
     color: white
 }
 
