updated to the max

--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -29,7 +29,7 @@
 }
 .typeMacOS-3EmCyP,
 .theme-dark .members-1998pB,
-.theme-dark .guildsWrapper-5TJh6A {
+.theme-dark .wrapper-1Rf91z {
     background-color: rgba(0,0,0,0.4);
 }
 .theme-dark .title-3qD0b-,
@@ -591,7 +591,7 @@
 .theme-dark .activityIconForeground-qYIPPg {
     fill: white;
 }
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before,
+.theme-dark .selected-nT-gM3:before,
 .guild-1EfMGQ.selected.unread-qLkInr:before {
     background: #593B3A; /* Main Color */
     border-radius: 0px;
@@ -600,12 +600,12 @@
     width: 17px !important;
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
     margin-top: -10px;
     left: -24px;
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     background: #593B3A; /* Main Color */
     border-radius: 30px;
     height: 15px;
@@ -699,14 +699,14 @@
 .unreadBar-3YD_k9 {
     display: none;
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     background: #593B3A; /* Main Color */
     border: none;
     color: white !important;
     font-size: 20px;
     font-weight: normal;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     background: #5B373A; /* Hover Color */
 }
 .iconCollapsed-3hFp_8, 
@@ -917,11 +917,11 @@ text-shadow: 0 0 6px black, 0 0 6px black;
 .tooltip-1OS-Ti.red-m6f4-H {
     background-color: rgba(0,0,0,0.4);
 }
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     background: rgba(0,0,0,0.4);
     border: none;
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     background: rgba(0,0,0,1);
 }
 
@@ -1531,15 +1531,15 @@ text-shadow: 0 0 6px black, 0 0 6px black;
 }
 /* ---- */
 /* Friends and DMS */
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     background: transparent;
 }
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW {
     color: white;
     font-weight: normal;
     text-transform: capitalize;
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background: #593B3A !important; /* Main Color */
     border-radius: 25px !important;
 }
