--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -22,7 +22,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .chat-3bRxxu form,
 .theme-dark .content-yTz4x3,
 .theme-dark .chat-3bRxxu,
@@ -273,10 +273,10 @@
     color: #fff;
     border: 1px solid #A8000B;
 }
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     background: transparent;
 }
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW {
     color: white;
 }
 .theme-dark .homeIcon-1FoKUJ {
@@ -284,7 +284,7 @@
     background-size: cover;
     color: transparent;
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background: #4F1C4F !important;
     border-radius: 50px !important;
 }
@@ -352,7 +352,7 @@
     border-radius: 0px;
 }
 /* Unread Channel Guilds */
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     border-radius: 0px;
     background-color: #84003B;
 }
@@ -689,8 +689,8 @@
 }
 /* --------------------------------- */
 /* Audio Icon */
-.theme-dark .guildsWrapper-5TJh6A .guilds .guild.audio .guild-inner:after, 
-.theme-dark .guildsWrapper-5TJh6A .guilds .guild.video .guild-inner:after {
+.theme-dark .wrapper-1Rf91z .guilds .guild.audio .guild-inner:after, 
+.theme-dark .wrapper-1Rf91z .guilds .guild.video .guild-inner:after {
     background-color: #4F1C4F;
 }
 /* ------------------- */
@@ -1348,21 +1348,21 @@
     background-size: 36px 36px;
 }
 /* Guild Error and Add */
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     border-radius: 50px;
     background-color: rgba(79, 28, 79,0.4);
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     border-radius: 50px;
     background-color: rgba(132, 0, 88,0.4);
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     border-radius: 50px;
     background-color: #4F1C4F;
     border: 2px dashed black !important;
     color: white;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     border-radius: 50px;
     background-color: #840058;
     color: white;
