--- a/Theme_Group_3/Gumi.theme.css
+++ b/Theme_Group_3/Gumi.theme.css
@@ -45,7 +45,7 @@
 .flex-horizontal>.flex-spacer,
 .theme-dark .title-3qD0b-,
 .theme-dark .members-1998pB,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .typeMacOS-3EmCyP,
 .theme-dark .container-3gCOGc {
     background: rgba(0,0,0,0.6);
@@ -268,19 +268,19 @@
     padding: 7px 10px;
     border-radius: 4px;
  }
- .theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+ .theme-dark .unread-2OHH1w:before {
     background: rgba(255,255,255,.33);
 }
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     border-radius: 50px;
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background-color: transparent !important;
     border-radius: 50px !important;
     transition: background .5s;
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4:hover {
+.theme-dark .wrapper-2lTRaf:hover {
     background: #8EA54B !important;
 }
 .wrapper-232cHJ.betterfriendcount-badge {
@@ -368,20 +368,20 @@
     overflow: visible;
     transition: margin-left .2s, background-color .2s;
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     background-color: #8EA54B;
 }
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     background: rgba(0,0,0,0.2);
     border: 2px solid #8EA54B;
     border-radius: 50%;
     font-weight: 400;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     background: rgba(142, 165, 75,1);
     border: 2px dashed rgba(162, 185, 94,1);
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     background: rgba(142, 165, 75,.5);
     border: 2px dashed rgba(162, 185, 94,1);
     border-radius: 50%;
@@ -850,7 +850,7 @@ a,
     margin-left: 12px;
     border-radius: 0; 
 }
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     background: transparent;
 }
 .theme-dark .contentTitle-2tG_sM,
@@ -858,7 +858,7 @@ a,
 .theme-dark .descriptionUsername-J_75O8,
 .marginLeft4-3VaXdt,
 .marginLeft8-1YseBe,
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW {
     color: white;
 }
 .theme-dark .iconForeground-1w5n7R {
