--- a/Theme_Group_4/Clear_Sunset.theme.css
+++ b/Theme_Group_4/Clear_Sunset.theme.css
@@ -4,7 +4,7 @@
 
 .theme-dark .layer-3QrUeG,
 .theme-dark .layers-3iHuyZ{background:rgba(0,0,0,0.2)}
-.container-2lgZY8,.channels-Ie2l6A,.container-PNkimc,.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3,.theme-dark .messagesWrapper-3lZDfY,.theme-dark .guildsWrapper-5TJh6A,.theme-dark .container-3gCOGc,.theme-dark .applicationStore-1pNvnv,.theme-dark .gameLibrary-TTDw4Y,.theme-dark .activityFeed-28jde9,.theme-dark .typing-2GQL18{background-color:transparent}
+.container-2lgZY8,.channels-Ie2l6A,.container-PNkimc,.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3,.theme-dark .messagesWrapper-3lZDfY,.theme-dark .wrapper-1Rf91z,.theme-dark .container-3gCOGc,.theme-dark .applicationStore-1pNvnv,.theme-dark .gameLibrary-TTDw4Y,.theme-dark .activityFeed-28jde9,.theme-dark .typing-2GQL18{background-color:transparent}
 .theme-dark .members-1998pB{background-color:rgba(0,0,0,0.4)}
 .header-2o-2hj{box-shadow:none;font-weight:300}
 .theme-dark .headerBar-UHpsPw,
@@ -155,11 +155,11 @@
   border-right: none;
 }
 
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
   background-color: rgba(255, 0, 0, 0.6);
 }
 
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
   background: rgba(255, 0, 0, 0.2);
   border-color: transparent;
   color: red;
@@ -922,23 +922,23 @@
     color: white;
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background: transparent !important;
 }
 
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     background: transparent;
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     background: #D92121;
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
     background: #8a2849;
 }
 
-.theme-dark .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW {
     color: white;
 }
 
@@ -1762,19 +1762,19 @@
     background-color: rgba(0,0,0,.6) !important;
 }
 
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     background: rgba(0,0,0,0.6);
     border-color: transparent;
     color: white;
 }
 
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     background: rgba(138, 40, 73,0.6);
     border-color: #8a2849;
     color: white;
 }
 
-.guildsAdd-21_IdK {
+.circleIconButton-jET_ig {
     border-style: dashed;
     border-width: 2px;
     font-size: 35px;
