--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -16,7 +16,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .chat-3bRxxu form,
 .theme-dark .content-yTz4x3,
 .theme-dark .chat-3bRxxu,
@@ -38,7 +38,7 @@
 .avatarSpeaking-1wJCNq {
     box-shadow: inset 3px 2px 6px rgba(255,255,255,0.7), inset 0px 0px 6px rgba(255,255,255,0.3);
 }
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before,
+.theme-dark .selected-nT-gM3:before,
 .guild-1EfMGQ.selected.unread-qLkInr:before {
     background: transparent;
     border-radius: 30px;
@@ -50,7 +50,7 @@
     z-index: 1;
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     background: transparent;
     border-radius: 30px;
     height: 15px;
@@ -68,11 +68,11 @@
     padding-bottom: 12px;
     border-radius: 60px;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     border: 1px solid black;
     color: black;
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     background: transparent;
     border: 1px dashed black;
     color: black;
@@ -120,7 +120,7 @@
     padding: 5px 9px;
     text-shadow: 0 0 6px rgba(0,0,0,1), 0 0 6px rgba(0,0,0,1);
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background: transparent !important;
     border-radius: 25px !important;
 }
@@ -238,11 +238,11 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     background-color: rgba(206, 233, 234,0.4); 
     color: black;
 }
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     background: transparent;
     border: 2px solid #E7FEFF;
     color: black!important;
@@ -661,10 +661,10 @@ a {
     margin-left: -6px;
 }
 /* Friends and DMs */
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     display: none;
 }
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM,
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW,
 .theme-dark .emptyStateNote-ZYTetQ {
     color: white;
 }
