--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -19,7 +19,7 @@
 .channels-Ie2l6A,
 .container-PNkimc,
 .container-2lgZY8,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .chat-3bRxxu, 
 .theme-dark .chat-3bRxxu form, 
 .theme-dark .content-yTz4x3,
@@ -70,10 +70,10 @@
     background: black;
     border: none;
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     background: black;
 }
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     border-color: #A87E56;
     color: white;
     border-width: 1px;
@@ -86,13 +86,13 @@
     background-color: black;
     color: white;
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     border-color: #705435;
     color: white;
     border-width: 2px;
     background: black;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     border-color: #A87E56;
     color: white;
     border-width: 1px;
@@ -453,11 +453,11 @@ a,
     background: #705435;
     color: #fff;
 }
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     background: silver;
     border-radius: 0px;
 }
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
     background: #EFD9C3;
     border-radius: 0px;
 }
@@ -928,7 +928,7 @@ a,
 }
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA,
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA,
-.theme-dark .guildSeparator-1X4GQ1:after,
+.theme-dark .guildSeparator-3s64Iy:after,
 .theme-dark .keybindShortcutTipsSelect-HDyfe8:last-of-type:before {
     background: none;
 }
@@ -940,7 +940,7 @@ a,
 .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2 .statusText-2F9zIF,
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
 .friendsTable-133bsv .friendsRow-2yicud .discord-tag .username,
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM,
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW,
 .theme-dark .emptyStateNote-ZYTetQ,
 .theme-dark .contentDefault-16dKSY .note-1VhFgQ,
 .misc-1CT3G7,
@@ -955,11 +955,11 @@ a,
     color: white;
     opacity: 0.7;
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background: #705435 !important;
     border-radius: 50px !important;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds .friends-icon {
+.theme-dark .wrapper-1Rf91z .guilds .friends-icon {
     background-image: url(/assets/89576a4bb71f927eb20e8aef987b499b.svg);
     background-position: 50%;
     background-repeat: no-repeat;
@@ -967,7 +967,7 @@ a,
     height: 50px;
     width: 50px;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds .friends-icon:hover {
+.theme-dark .wrapper-1Rf91z .guilds .friends-icon:hover {
     background-image: url(/assets/89576a4bb71f927eb20e8aef987b499b.svg);
     background-position: 50%;
     background-repeat: no-repeat;
