--- a/Theme_Group_2/Thunderstorm.theme.css
+++ b/Theme_Group_2/Thunderstorm.theme.css
@@ -17,7 +17,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .chat-3bRxxu form,
 .theme-dark .content-yTz4x3,
 .theme-dark .chat-3bRxxu,
@@ -305,11 +305,11 @@
 .theme-dark .embedTitleLink-1Zla9e {
     color: #78abef!important;
 }
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
     background: rgba(0,0,0,0.4);
     border: none;
 }
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
     background: rgba(0,0,0,1);
 }
 .theme-dark .reaction-1ELvT8 {
@@ -329,7 +329,7 @@
     background: #272729;
     color: #fff;
 }
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
     background-color: #272729 !important;
     border-radius: 25px;
     cursor: pointer;
@@ -340,7 +340,7 @@
 }
 .unread-1xRYoj,
 .mention-1f5kbO,
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before,
+.theme-dark .unread-2OHH1w:before,
 [style*="line-height: 20px; font-size: 12px;"] {
     background-color: #272729 !important;
 }
@@ -348,10 +348,10 @@
 .mention-1f5kbO:hover {
     background-color: #1B1B1D !important;
 }
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     display: none;
 }
-.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW {
     color: white;
 }
 .theme-dark .membersGroup-v9BXpm {
@@ -408,11 +408,11 @@
     border: 1px solid black;
     color: white;
 }
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     border-color: white;
     color: white;
 }
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     border-color:  transparent;
     color: white;
     background-color: #272729;
