--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -33,7 +33,7 @@
   background: rgba(0, 0, 0, 0.34);
 }
 
-.theme-dark .guildsWrapper-5TJh6A {
+.theme-dark .wrapper-1Rf91z {
   background-color: transparent;
   border-radius: 0;
 }
@@ -608,7 +608,7 @@
 
 /* Main Chat */
 
-.guild-1EfMGQ.unread-qLkInr:before {
+.unread-2OHH1w:before {
   width: 26px;
   height: 26px;
   border-radius: 0 0 0 90px;
@@ -619,16 +619,16 @@
   transform: rotate(2deg);
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
   background: rgba(100, 65, 165, 0.7);
   /*Primary Transparent Color*/
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
   background: rgba(130, 183, 15, 0.7);
 }
 
-.guild-1EfMGQ.selected-ML3OIq:before {
+.selected-nT-gM3:before {
   width: 26px;
   height: 26px;
   border-radius: 0 0 0 90px;
@@ -639,12 +639,12 @@
   transform: rotate(2deg);
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
   background-color: #6441a5 !important;
   /*Primary Color*/
 }
 
-.guild-1EfMGQ .guildInner-3DSoA4 {
+.wrapper-2lTRaf {
   border-radius: 25px !important;
 }
 
@@ -746,11 +746,11 @@
   display: none;
 }
 
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
   background-color: rgba(0, 0, 0, 0.62);
 }
 
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
   background: rgba(0, 0, 0, 0.22);
   border-color: transparent;
   color: red;
@@ -799,20 +799,20 @@
   border-right: none;
 }
 
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
   background: #6441a5;
   /*Primary Color*/
   border-color: rgba(255, 255, 255, 0.23);
   color: white;
 }
 
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
   background: #4e3380;
   /*Secondary Color*/
   border-color: rgba(255, 255, 255, 0.23);
 }
 
-.guildsAdd-21_IdK {
+.circleIconButton-jET_ig {
   border-style: solid;
   border-width: 2px;
   font-size: 30px;
@@ -1032,11 +1032,11 @@
   border: 2px solid rgba(255, 255, 255, 0.23);
 }
 
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
   background: transparent;
 }
 
-.theme-dark .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW {
   color: white;
 }
 
