--- a/Theme_Group_4/Ram.theme.css
+++ b/Theme_Group_4/Ram.theme.css
@@ -14,7 +14,7 @@
 .container-PNkimc,
 .channels-Ie2l6A,
 .container-2lgZY8,
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .typing-2GQL18,
 .theme-dark .container-3gCOGc,
 .theme-dark .chat-3bRxxu,
@@ -334,7 +334,7 @@
    background-color: rgba(112, 195, 60, 0.8)
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
    background: #f896c1!important;
    border-radius: 50px!important
 }
@@ -532,11 +532,11 @@
    width: 24px
 }
 
-.theme-dark .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW {
   color: white
 }
 
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
     background: transparent
 }
 
@@ -979,15 +979,15 @@
     background: linear-gradient(17deg, rgba(0,0,0,1) 0%, #f896c1 100%)
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
     background: #f896c1
 }
 
-.guild-1EfMGQ.unread-qLkInr:before {
+.unread-2OHH1w:before {
     border-radius: 0
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
     background: #88d13a
 }
 
@@ -1078,11 +1078,11 @@
     background-color: rgba(248, 150, 193,.9);
 }
 
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
   background-color: rgba(0, 0, 0, 0.62);
 }
 
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
   background: rgba(0, 0, 0, 0.22);
   border-color: transparent;
   color: red;
@@ -1607,21 +1607,21 @@
     background-color: rgba(218, 44, 67,.8)
 }
 
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
     border-color: transparent;
     color: white;
     background: rgba(248, 150, 193, 0.84)
 }
 
 
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
     background: rgba(255,255,255,0.34);
     border-color: transparent;
     color: white;
     transition: background 1s ease
 }
 
-.guildsAdd-21_IdK {
+.circleIconButton-jET_ig {
     border-radius: 50%;
     border-style: solid;
     border-width: 3px;
