--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -41,7 +41,7 @@
    background: rgba(0, 0, 0, 0.3);
 }
 
-.theme-dark .guildsWrapper-5TJh6A,
+.theme-dark .wrapper-1Rf91z,
 .theme-dark .members-1998pB {
    background-color: rgba(0, 0, 0, 0.5);
 }
@@ -67,18 +67,18 @@
    width: 100%;
 }
 
-.theme-dark .guildsWrapper-5TJh6A {
+.theme-dark .wrapper-1Rf91z {
    border-radius: 0;
 }
 
-.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
+.theme-dark .unread-2OHH1w:before {
    background: rgba(255, 255, 255, 0.33);
    background-image: url(https://cdn4.iconfinder.com/data/icons/weather-29/256/snowflake-512.png);
    border: 1px solid rgba(255, 255, 255, 0.35);
    background-size: cover;
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
    border: 3px solid rgba(255, 255, 255, 0.44);
 }
 
@@ -96,7 +96,7 @@
    opacity: .9;
 }
 
-.guild-1EfMGQ.selected-ML3OIq:before {
+.selected-nT-gM3:before {
    border-radius: 50px;
    height: 20px;
    width: 20px;
@@ -110,14 +110,14 @@
    margin-top: -10px;
 }
 
-.guild-1EfMGQ.unread-qLkInr:before {
+.unread-2OHH1w:before {
    left: -3px;
    z-index: 1;
    top: 7px;
    position: absolute;
 }
 
-.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
+.theme-dark .selected-nT-gM3:before {
    background: rgba(255, 255, 255, 0.33);
    z-index: 1;
    top: 7px;
@@ -131,21 +131,21 @@
    background-color: rgba(255, 255, 255, 0.54);
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.theme-dark .wrapper-2lTRaf {
    background: transparent !important;
 }
 
-.guild-1EfMGQ .guildInner-3DSoA4 {
+.wrapper-2lTRaf {
    border-radius: 25px !important;
    cursor: pointer;
    font-size: 14px;
 }
 
-.theme-dark .guildSeparator-1X4GQ1:after {
+.theme-dark .guildSeparator-3s64Iy:after {
    background: transparent;
 }
 
-.theme-dark .friendsOnline-_wi_fM {
+.theme-dark .friendsOnline-2JkivW {
    color: white;
 }
 
@@ -652,11 +652,11 @@
    border: 2px solid
 }
 
-.theme-dark .guildsError-3cFMtY:hover {
+.theme-dark .guildsError-b7zR5H:hover {
    background-color: rgba(0, 0, 0, 0.62);
 }
 
-.theme-dark .guildsError-3cFMtY {
+.theme-dark .guildsError-b7zR5H {
    background: rgba(0, 0, 0, 0.22);
    border-color: transparent;
    color: silver;
@@ -705,19 +705,19 @@
    border-right: none;
 }
 
-.theme-dark .guildsAdd-21_IdK:hover {
+.theme-dark .circleIconButton-jET_ig:hover {
    border-color: rgba(255, 255, 255, 0.75);
    color: silver;
    background: rgba(255, 255, 255, 0.43);
 }
 
-.theme-dark .guildsAdd-21_IdK {
+.theme-dark .circleIconButton-jET_ig {
    background: rgba(255, 255, 255, 0.23);
    border-color: rgba(255, 255, 255, 0.45);
    color: silver;
 }
 
-.guildsAdd-21_IdK {
+.circleIconButton-jET_ig {
    border-radius: 50%;
    border-style: solid;
    border-width: 2px;
