Activity Feed Fix?

--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -1881,7 +1881,7 @@ opacity: 1;
     background-size: cover;
 }
 /* Game Tab */
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.43);
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
