--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -1690,7 +1690,7 @@
 .connectedAccountName-f8AEe2 {
     color: white;
 }
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.3);
 }
 .arrow-1-DaGi,
