--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -1743,7 +1743,7 @@ a,
     border: 2px solid black !important;
     background-color: #705435 !important;
 }
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.3);
 }
 .arrow-1-DaGi,
