--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -1478,7 +1478,7 @@
     border-radius: 30px;
 }
 /* Upload Section */
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.3);
 }
 .arrow-1-DaGi,
