--- a/Theme_Group_4/Clear_Sunset.theme.css
+++ b/Theme_Group_4/Clear_Sunset.theme.css
@@ -4,7 +4,7 @@
 
 .theme-dark .layer-3QrUeG,
 .theme-dark .layers-3iHuyZ{background:rgba(0,0,0,0.2)}
-.container-2lgZY8,.channels-Ie2l6A,.container-PNkimc,.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3,.theme-dark .messagesWrapper-3lZDfY,.theme-dark .wrapper-1Rf91z,.theme-dark .container-3gCOGc,.theme-dark .applicationStore-1pNvnv,.theme-dark .gameLibrary-TTDw4Y,.theme-dark .activityFeed-28jde9,.theme-dark .typing-2GQL18{background-color:transparent}
+.container-2lgZY8,.channels-Ie2l6A,.container-PNkimc,.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3,.theme-dark .messagesWrapper-3lZDfY,.theme-dark .wrapper-1Rf91z,.theme-dark .container-3gCOGc,.theme-dark .applicationStore-1pNvnv,.theme-dark .gameLibrary-TTDw4Y,.theme-dark .activityFeed-1C0EmJ,.theme-dark .typing-2GQL18{background-color:transparent}
 .theme-dark .members-1998pB{background-color:rgba(0,0,0,0.4)}
 .header-2o-2hj{box-shadow:none;font-weight:300}
 .theme-dark .headerBar-UHpsPw,
@@ -1869,8 +1869,8 @@
 
 /* Friends Game Tabs */
 .arrow-1-DaGi,
-.nextArrow-_BbNud, 
-.prevArrow-GBsQ1m {
+.nextArrow-V_4mvH, 
+.prevArrow-11tqRS {
     color: white;
 }
 
