--- a/Theme_Group_4/Ram.theme.css
+++ b/Theme_Group_4/Ram.theme.css
@@ -431,7 +431,7 @@
    background-color: rgba(255, 255, 255, .2)
 }
 
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
    background-color: transparent
 }
 
