--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -28,7 +28,7 @@
 .theme-dark .content-yTz4x3,
 .theme-dark .typing-2GQL18,
 .theme-dark .messagesWrapper-3lZDfY,
-.theme-dark .activityFeed-28jde9,
+.theme-dark .activityFeed-1C0EmJ,
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
 .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
 .theme-dark .container-3gCOGc,
