--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -18,7 +18,7 @@
 .theme-dark .container-3gCOGc,
 .theme-dark .contentRegion-3nDuYy,
 .theme-dark .sidebarRegion-VFTUkN,
-.theme-dark .activityFeed-28jde9,
+.theme-dark .activityFeed-1C0EmJ,
 .theme-dark .gameLibrary-TTDw4Y,
 .theme-dark .applicationStore-1pNvnv {
     background-color: transparent;
