--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -1946,7 +1946,7 @@ a {
     background-color: transparent;
     border-color: transparent;
 }
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.3);
 }
 .arrow-1-DaGi,
