--- a/Theme_Group_3/Gumi.theme.css
+++ b/Theme_Group_3/Gumi.theme.css
@@ -1914,7 +1914,7 @@ a,
     color: white;
 }
 /* Activity Feed and Unreachable Stuff */
-.theme-dark .activityFeed-28jde9 {
+.theme-dark .activityFeed-1C0EmJ {
     background-color: rgba(0,0,0,0.6);
 }
 .video-1FfuMD,
